--- a/03-PO33Q.html
+++ b/03-PO33Q.html
@@ -701,8 +701,8 @@ Number of Fisher Scoring iterations: 5</code></pre>
 
     <script>
 
-      function styleCell_6kev4kazxf0um90dunv8(i, j, css_id) {
-          var table = document.getElementById("tinytable_6kev4kazxf0um90dunv8");
+      function styleCell_wmavrhmpi5moxdfsn9z6(i, j, css_id) {
+          var table = document.getElementById("tinytable_wmavrhmpi5moxdfsn9z6");
           var cell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
           if (cell) {
               console.log(`Styling cell at (${i}, ${j}) with class ${css_id}`);
@@ -711,8 +711,8 @@ Number of Fisher Scoring iterations: 5</code></pre>
               console.warn(`Cell at (${i}, ${j}) not found.`);
           }
       }
-      function spanCell_6kev4kazxf0um90dunv8(i, j, rowspan, colspan) {
-        var table = document.getElementById("tinytable_6kev4kazxf0um90dunv8");
+      function spanCell_wmavrhmpi5moxdfsn9z6(i, j, rowspan, colspan) {
+        var table = document.getElementById("tinytable_wmavrhmpi5moxdfsn9z6");
         const targetCell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
         if (!targetCell) {
           console.warn(`Cell at (${i}, ${j}) not found.`);
@@ -743,20 +743,20 @@ Number of Fisher Scoring iterations: 5</code></pre>
       window.addEventListener('load', function () {
           var cellsToStyle = [
             // tinytable style arrays after
-          { positions: [ { i: '4', j: 1 },  ], css_id: 'tinytable_css_qeel6gaw8xhyylrdstcr',}, 
-          { positions: [ { i: '1', j: 1 }, { i: '2', j: 1 }, { i: '3', j: 1 },  ], css_id: 'tinytable_css_a2zta7n8dk9p89ipzc0s',}, 
-          { positions: [ { i: '-1', j: 1 },  ], css_id: 'tinytable_css_vmdyx0243sw5m706jmy1',}, 
-          { positions: [ { i: '0', j: 1 },  ], css_id: 'tinytable_css_6siac8rst12ohz5qyzqf',}, 
-          { positions: [ { i: '4', j: 0 },  ], css_id: 'tinytable_css_2xdk3m0xb7wtk53alqtz',}, 
-          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 },  ], css_id: 'tinytable_css_qf0hbgqe2a5144xrld5f',}, 
-          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_b9g50kgceogsaq0jprd5',}, 
-          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_k0pa1rsgx9xdwe61i05y',}, 
+          { positions: [ { i: '4', j: 1 },  ], css_id: 'tinytable_css_1dscyh4iegniwya8w1e5',}, 
+          { positions: [ { i: '1', j: 1 }, { i: '2', j: 1 }, { i: '3', j: 1 },  ], css_id: 'tinytable_css_b9gw6r784zafzlvwm0pe',}, 
+          { positions: [ { i: '-1', j: 1 },  ], css_id: 'tinytable_css_irua0f5sygjtuit9zyk4',}, 
+          { positions: [ { i: '0', j: 1 },  ], css_id: 'tinytable_css_41ez3vjbari4nkyr6juo',}, 
+          { positions: [ { i: '4', j: 0 },  ], css_id: 'tinytable_css_nyd0vmhawtz4qt0xu0ni',}, 
+          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 },  ], css_id: 'tinytable_css_chy9xi540ch8l5o3a5yc',}, 
+          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_8k64f7s3bu95quy1eb09',}, 
+          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_1z497decj9kps4kox9gq',}, 
           ];
 
           // Loop over the arrays to style the cells
           cellsToStyle.forEach(function (group) {
               group.positions.forEach(function (cell) {
-                  styleCell_6kev4kazxf0um90dunv8(cell.i, cell.j, group.css_id);
+                  styleCell_wmavrhmpi5moxdfsn9z6(cell.i, cell.j, group.css_id);
               });
           });
       });
@@ -764,17 +764,17 @@ Number of Fisher Scoring iterations: 5</code></pre>
 
     <style>
       /* tinytable css entries after */
-      .table td.tinytable_css_qeel6gaw8xhyylrdstcr, .table th.tinytable_css_qeel6gaw8xhyylrdstcr { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_a2zta7n8dk9p89ipzc0s, .table th.tinytable_css_a2zta7n8dk9p89ipzc0s { text-align: center; }
-      .table td.tinytable_css_vmdyx0243sw5m706jmy1, .table th.tinytable_css_vmdyx0243sw5m706jmy1 { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_6siac8rst12ohz5qyzqf, .table th.tinytable_css_6siac8rst12ohz5qyzqf { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_2xdk3m0xb7wtk53alqtz, .table th.tinytable_css_2xdk3m0xb7wtk53alqtz { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_qf0hbgqe2a5144xrld5f, .table th.tinytable_css_qf0hbgqe2a5144xrld5f { text-align: left; }
-      .table td.tinytable_css_b9g50kgceogsaq0jprd5, .table th.tinytable_css_b9g50kgceogsaq0jprd5 { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_k0pa1rsgx9xdwe61i05y, .table th.tinytable_css_k0pa1rsgx9xdwe61i05y { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_1dscyh4iegniwya8w1e5, .table th.tinytable_css_1dscyh4iegniwya8w1e5 { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_b9gw6r784zafzlvwm0pe, .table th.tinytable_css_b9gw6r784zafzlvwm0pe { text-align: center; }
+      .table td.tinytable_css_irua0f5sygjtuit9zyk4, .table th.tinytable_css_irua0f5sygjtuit9zyk4 { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_41ez3vjbari4nkyr6juo, .table th.tinytable_css_41ez3vjbari4nkyr6juo { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_nyd0vmhawtz4qt0xu0ni, .table th.tinytable_css_nyd0vmhawtz4qt0xu0ni { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_chy9xi540ch8l5o3a5yc, .table th.tinytable_css_chy9xi540ch8l5o3a5yc { text-align: left; }
+      .table td.tinytable_css_8k64f7s3bu95quy1eb09, .table th.tinytable_css_8k64f7s3bu95quy1eb09 { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_1z497decj9kps4kox9gq, .table th.tinytable_css_1z497decj9kps4kox9gq { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
     </style>
     <div class="container">
-      <table class="table table-borderless" id="tinytable_6kev4kazxf0um90dunv8" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
+      <table class="table table-borderless" id="tinytable_wmavrhmpi5moxdfsn9z6" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
         <thead>
 <tr>
 <th scope="col" align="center" colspan="1" data-row="-1" data-col="0"> </th>
@@ -878,8 +878,8 @@ Table&nbsp;1: Influence of per capita GDP on Democracy
 
     <script>
 
-      function styleCell_cvzkndym80mo052k7zjh(i, j, css_id) {
-          var table = document.getElementById("tinytable_cvzkndym80mo052k7zjh");
+      function styleCell_ld6hj7gi0t6a3q38juta(i, j, css_id) {
+          var table = document.getElementById("tinytable_ld6hj7gi0t6a3q38juta");
           var cell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
           if (cell) {
               console.log(`Styling cell at (${i}, ${j}) with class ${css_id}`);
@@ -888,8 +888,8 @@ Table&nbsp;1: Influence of per capita GDP on Democracy
               console.warn(`Cell at (${i}, ${j}) not found.`);
           }
       }
-      function spanCell_cvzkndym80mo052k7zjh(i, j, rowspan, colspan) {
-        var table = document.getElementById("tinytable_cvzkndym80mo052k7zjh");
+      function spanCell_ld6hj7gi0t6a3q38juta(i, j, rowspan, colspan) {
+        var table = document.getElementById("tinytable_ld6hj7gi0t6a3q38juta");
         const targetCell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
         if (!targetCell) {
           console.warn(`Cell at (${i}, ${j}) not found.`);
@@ -920,20 +920,20 @@ Table&nbsp;1: Influence of per capita GDP on Democracy
       window.addEventListener('load', function () {
           var cellsToStyle = [
             // tinytable style arrays after
-          { positions: [ { i: '4', j: 1 },  ], css_id: 'tinytable_css_8iiti6ej7oulqup4u80k',}, 
-          { positions: [ { i: '1', j: 1 }, { i: '2', j: 1 }, { i: '3', j: 1 },  ], css_id: 'tinytable_css_gwrky51zl0yszv4g7q0x',}, 
-          { positions: [ { i: '-1', j: 1 },  ], css_id: 'tinytable_css_vx454dd6qcbj6a4vg439',}, 
-          { positions: [ { i: '0', j: 1 },  ], css_id: 'tinytable_css_izkh718zkng4n7zge2y5',}, 
-          { positions: [ { i: '4', j: 0 },  ], css_id: 'tinytable_css_urmcdn70ar2j0od3we7y',}, 
-          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 },  ], css_id: 'tinytable_css_3413q9rvnktt6lnh9w83',}, 
-          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_wqtkapwrydqpexi40mqw',}, 
-          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_s0g4h0lgkloznn4cd96m',}, 
+          { positions: [ { i: '4', j: 1 },  ], css_id: 'tinytable_css_evfxrvjgnwz8a24dha9v',}, 
+          { positions: [ { i: '1', j: 1 }, { i: '2', j: 1 }, { i: '3', j: 1 },  ], css_id: 'tinytable_css_2lyt7b0i1zhe4kzumefe',}, 
+          { positions: [ { i: '-1', j: 1 },  ], css_id: 'tinytable_css_uh6taz7pznmdm744kz39',}, 
+          { positions: [ { i: '0', j: 1 },  ], css_id: 'tinytable_css_734gn5dc6nj9tst1jf5i',}, 
+          { positions: [ { i: '4', j: 0 },  ], css_id: 'tinytable_css_vlxnomtdmc5ini3r3qru',}, 
+          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 },  ], css_id: 'tinytable_css_r4mq61fvj45blotf9xjv',}, 
+          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_n62a3zft5ifb8rpccviw',}, 
+          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_i81xr9fswqenmkvups1x',}, 
           ];
 
           // Loop over the arrays to style the cells
           cellsToStyle.forEach(function (group) {
               group.positions.forEach(function (cell) {
-                  styleCell_cvzkndym80mo052k7zjh(cell.i, cell.j, group.css_id);
+                  styleCell_ld6hj7gi0t6a3q38juta(cell.i, cell.j, group.css_id);
               });
           });
       });
@@ -941,17 +941,17 @@ Table&nbsp;1: Influence of per capita GDP on Democracy
 
     <style>
       /* tinytable css entries after */
-      .table td.tinytable_css_8iiti6ej7oulqup4u80k, .table th.tinytable_css_8iiti6ej7oulqup4u80k { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_gwrky51zl0yszv4g7q0x, .table th.tinytable_css_gwrky51zl0yszv4g7q0x { text-align: center; }
-      .table td.tinytable_css_vx454dd6qcbj6a4vg439, .table th.tinytable_css_vx454dd6qcbj6a4vg439 { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_izkh718zkng4n7zge2y5, .table th.tinytable_css_izkh718zkng4n7zge2y5 { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_urmcdn70ar2j0od3we7y, .table th.tinytable_css_urmcdn70ar2j0od3we7y { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_3413q9rvnktt6lnh9w83, .table th.tinytable_css_3413q9rvnktt6lnh9w83 { text-align: left; }
-      .table td.tinytable_css_wqtkapwrydqpexi40mqw, .table th.tinytable_css_wqtkapwrydqpexi40mqw { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_s0g4h0lgkloznn4cd96m, .table th.tinytable_css_s0g4h0lgkloznn4cd96m { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_evfxrvjgnwz8a24dha9v, .table th.tinytable_css_evfxrvjgnwz8a24dha9v { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_2lyt7b0i1zhe4kzumefe, .table th.tinytable_css_2lyt7b0i1zhe4kzumefe { text-align: center; }
+      .table td.tinytable_css_uh6taz7pznmdm744kz39, .table th.tinytable_css_uh6taz7pznmdm744kz39 { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_734gn5dc6nj9tst1jf5i, .table th.tinytable_css_734gn5dc6nj9tst1jf5i { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_vlxnomtdmc5ini3r3qru, .table th.tinytable_css_vlxnomtdmc5ini3r3qru { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_r4mq61fvj45blotf9xjv, .table th.tinytable_css_r4mq61fvj45blotf9xjv { text-align: left; }
+      .table td.tinytable_css_n62a3zft5ifb8rpccviw, .table th.tinytable_css_n62a3zft5ifb8rpccviw { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_i81xr9fswqenmkvups1x, .table th.tinytable_css_i81xr9fswqenmkvups1x { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
     </style>
     <div class="container">
-      <table class="table table-borderless" id="tinytable_cvzkndym80mo052k7zjh" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
+      <table class="table table-borderless" id="tinytable_ld6hj7gi0t6a3q38juta" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
         <thead>
 <tr>
 <th scope="col" align="center" colspan="1" data-row="-1" data-col="0"> </th>
@@ -1239,84 +1239,82 @@ Stinerock, R. (2022). <em><span class="nocase">Statistics with R â€“ A Beginnerâ
   });
 </script>
 <script>
-
-
-const sidebar = document.querySelector('#quarto-sidebar, .quarto-sidebar');
-const where = document.querySelector('.quarto-secondary-nav') || document.querySelector('#quarto-header');
-if (!sidebar || !where) return;
-
-
-// Collect top-level chapter links. Fallback to all links if needed.
-let links = Array.from(sidebar.querySelectorAll('.sidebar-menu > .sidebar-item > .sidebar-item-container > a.sidebar-link'));
-if (!links.length) links = Array.from(sidebar.querySelectorAll('.sidebar-link'));
-if (!links.length) return;
-
-
-const bar = document.createElement('div');
-bar.id = 'quarto-tertiary-nav';
-
-
-links.forEach(a => {
-const clone = a.cloneNode(true);
-clone.removeAttribute('data-bs-toggle');
-clone.classList.remove('sidebar-link-toggle');
-bar.appendChild(clone);
-});
-
-
-where.after(bar);
-
-
-// Ensure current page link is visible
-const current = bar.querySelector('a[aria-current="page"], a.active');
-if (current && 'scrollIntoView' in current) {
-current.scrollIntoView({behavior: 'auto', inline: 'center', block: 'nearest'});
+return links;
 }
+
+
+function ensureBar(){
+let bar = qs('#quarto-tertiary-nav');
+if (!bar){
+const anchor = findAnchor();
+if (!anchor) return null;
+bar = document.createElement('div');
+bar.id = 'quarto-tertiary-nav';
+anchor.after(bar);
+}
+return bar;
+}
+
+
+function hydrateBar(){
+const sidebar = findSidebar();
+const bar = ensureBar();
+if (!sidebar || !bar) return false;
+if (!bar.childElementCount){
+const links = collectLinks(sidebar);
+links.forEach(a => {
+const c = a.cloneNode(true);
+c.removeAttribute('data-bs-toggle');
+c.classList.remove('sidebar-link-toggle');
+bar.appendChild(c);
+});
+}
+// Mark current page
+qsa('a', bar).forEach(a => {
+if (a.pathname === location.pathname && (!a.hash || a.hash === location.hash)){
+a.setAttribute('aria-current','page');
+a.classList.add('active');
+}
+});
+const current = qs('a[aria-current="page"], a.active', bar);
+if (current && current.scrollIntoView) current.scrollIntoView({behavior:'auto', inline:'center', block:'nearest'});
+return true;
 }
 
 
 function setHeights(){
-const primary = document.getElementById('quarto-header');
-const secondary = document.querySelector('.quarto-secondary-nav');
-const rootStyle = document.documentElement.style;
-rootStyle.setProperty('--primary-height', (primary ? primary.offsetHeight : 44) + 'px');
-rootStyle.setProperty('--secondary-height', (secondary ? secondary.offsetHeight : 44) + 'px');
+const header = qs('#quarto-header');
+const secondary = qs('.quarto-secondary-nav');
+const root = document.documentElement.style;
+root.setProperty('--primary-height', (header ? header.offsetHeight : 44) + 'px');
+root.setProperty('--secondary-height', (secondary ? secondary.offsetHeight : 0) + 'px');
 }
 
 
-// Hide/Show on scroll (Headroom-style, tiny + dependency-free)
-let lastY = window.scrollY;
-let acc = 0;
-const threshold = 24; // px accumulated before toggling, to avoid jitter
-
-
+// Hide/show on scroll (mobile only)
+let lastY = 0, acc = 0; const threshold = 24;
 function onScroll(){
-if (!isMobile()) return;
-const y = window.scrollY;
-const dy = y - lastY;
-acc = (dy > 0) ? Math.min(96, acc + dy) : Math.max(-96, acc + dy);
-if (acc > threshold) {
-document.documentElement.classList.add('nav-hidden');
-} else if (acc < -threshold || y < 2) {
-document.documentElement.classList.remove('nav-hidden');
-}
-lastY = y;
+if (!window.matchMedia('(max-width: 991.98px)').matches) return;
+const y = window.scrollY, dy = y - lastY; lastY = y;
+acc = Math.max(-96, Math.min(96, acc + dy));
+if (acc > threshold) document.documentElement.classList.add('nav-hidden');
+else if (acc < -threshold || y < 2) document.documentElement.classList.remove('nav-hidden');
 }
 
 
 function init(){
-if (!isMobile()) return; // desktop unchanged
-buildTertiary();
+hydrateBar();
 setHeights();
-window.addEventListener('resize', setHeights, {passive: true});
-window.addEventListener('scroll', onScroll, {passive: true});
-// Recalc after fonts/images settle
-window.setTimeout(setHeights, 300);
-window.addEventListener('load', setHeights);
+window.addEventListener('resize', setHeights, {passive:true});
+window.addEventListener('scroll', onScroll, {passive:true});
 }
 
 
+// Run now, on DOM ready, and when DOM mutates (e.g., sidebar injected)
+if (document.readyState !== 'loading') init();
 document.addEventListener('DOMContentLoaded', init);
+const mo = new MutationObserver(() => { if (hydrateBar()) setHeights(); });
+mo.observe(document.documentElement, {childList:true, subtree:true});
 })();
 </script>
 <script id="quarto-html-after-body" type="application/javascript">
