--- a/07-PO33Q.html
+++ b/07-PO33Q.html
@@ -1678,8 +1678,8 @@ Figure&nbsp;6: ROC Curve
 
     <script>
 
-      function styleCell_072qd9puh52lonc9xsbz(i, j, css_id) {
-          var table = document.getElementById("tinytable_072qd9puh52lonc9xsbz");
+      function styleCell_6vsk0o09mdp8ch6pnm39(i, j, css_id) {
+          var table = document.getElementById("tinytable_6vsk0o09mdp8ch6pnm39");
           var cell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
           if (cell) {
               console.log(`Styling cell at (${i}, ${j}) with class ${css_id}`);
@@ -1688,8 +1688,8 @@ Figure&nbsp;6: ROC Curve
               console.warn(`Cell at (${i}, ${j}) not found.`);
           }
       }
-      function spanCell_072qd9puh52lonc9xsbz(i, j, rowspan, colspan) {
-        var table = document.getElementById("tinytable_072qd9puh52lonc9xsbz");
+      function spanCell_6vsk0o09mdp8ch6pnm39(i, j, rowspan, colspan) {
+        var table = document.getElementById("tinytable_6vsk0o09mdp8ch6pnm39");
         const targetCell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
         if (!targetCell) {
           console.warn(`Cell at (${i}, ${j}) not found.`);
@@ -1720,26 +1720,26 @@ Figure&nbsp;6: ROC Curve
       window.addEventListener('load', function () {
           var cellsToStyle = [
             // tinytable style arrays after
-          { positions: [ { i: '-1', j: 4 }, { i: '-1', j: 3 },  ], css_id: 'tinytable_css_9fdgiaalyk2d9xspsnpu',}, 
-          { positions: [ { i: '-2', j: 3 }, { i: '-2', j: 2 }, { i: '-2', j: 4 },  ], css_id: 'tinytable_css_vznyjur21obwotup9ty8',}, 
-          { positions: [ { i: '10', j: 1 }, { i: '10', j: 4 }, { i: '10', j: 2 }, { i: '10', j: 3 },  ], css_id: 'tinytable_css_gkr0shc6z3f2qfj7cj5g',}, 
-          { positions: [ { i: '8', j: 3 }, { i: '8', j: 2 }, { i: '8', j: 4 }, { i: '8', j: 1 },  ], css_id: 'tinytable_css_v8stfzhdpokgchddcymm',}, 
-          { positions: [ { i: '2', j: 1 }, { i: '1', j: 1 }, { i: '6', j: 1 }, { i: '3', j: 1 }, { i: '5', j: 1 }, { i: '1', j: 2 }, { i: '7', j: 1 }, { i: '4', j: 1 }, { i: '9', j: 1 }, { i: '5', j: 2 }, { i: '2', j: 2 }, { i: '3', j: 2 }, { i: '4', j: 2 }, { i: '9', j: 2 }, { i: '6', j: 2 }, { i: '7', j: 2 }, { i: '3', j: 3 }, { i: '4', j: 3 }, { i: '1', j: 3 }, { i: '2', j: 3 }, { i: '7', j: 3 }, { i: '3', j: 4 }, { i: '5', j: 3 }, { i: '6', j: 3 }, { i: '2', j: 4 }, { i: '7', j: 4 }, { i: '9', j: 3 }, { i: '1', j: 4 }, { i: '6', j: 4 }, { i: '4', j: 4 }, { i: '5', j: 4 }, { i: '9', j: 4 },  ], css_id: 'tinytable_css_5yq75039z05662uszkll',}, 
-          { positions: [ { i: '-2', j: 1 },  ], css_id: 'tinytable_css_dprx9mowaic01dlhacp1',}, 
-          { positions: [ { i: '-1', j: 1 }, { i: '-1', j: 2 },  ], css_id: 'tinytable_css_iiff5u7fn4bh5o5fkaiz',}, 
-          { positions: [ { i: '0', j: 1 }, { i: '0', j: 2 }, { i: '0', j: 3 }, { i: '0', j: 4 },  ], css_id: 'tinytable_css_s5r2ht27v643rgiixbem',}, 
-          { positions: [ { i: '10', j: 0 },  ], css_id: 'tinytable_css_ynjvyaq7a3zg7ayuo5w1',}, 
-          { positions: [ { i: '8', j: 0 },  ], css_id: 'tinytable_css_ah419zd4j2v1kcpr7w1k',}, 
-          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 }, { i: '4', j: 0 }, { i: '5', j: 0 }, { i: '6', j: 0 }, { i: '7', j: 0 }, { i: '9', j: 0 },  ], css_id: 'tinytable_css_j8olylp34juag9ak5781',}, 
-          { positions: [ { i: '-2', j: 0 },  ], css_id: 'tinytable_css_x537m9qpsvb8zeo8eazh',}, 
-          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_5hae5192i26j2ni2td8o',}, 
-          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_0e0pty962sf4rw8rcr4n',}, 
+          { positions: [ { i: '-1', j: 4 }, { i: '-1', j: 3 },  ], css_id: 'tinytable_css_suqnnn4om56q9xbgv7xr',}, 
+          { positions: [ { i: '-2', j: 3 }, { i: '-2', j: 2 }, { i: '-2', j: 4 },  ], css_id: 'tinytable_css_emka4ljj5sosn8y8g07g',}, 
+          { positions: [ { i: '10', j: 1 }, { i: '10', j: 4 }, { i: '10', j: 2 }, { i: '10', j: 3 },  ], css_id: 'tinytable_css_hbiwqi8vxq6kkju7d1pb',}, 
+          { positions: [ { i: '8', j: 3 }, { i: '8', j: 2 }, { i: '8', j: 4 }, { i: '8', j: 1 },  ], css_id: 'tinytable_css_3xezvbaq3yn4rijkgcq2',}, 
+          { positions: [ { i: '2', j: 1 }, { i: '1', j: 1 }, { i: '6', j: 1 }, { i: '3', j: 1 }, { i: '5', j: 1 }, { i: '1', j: 2 }, { i: '7', j: 1 }, { i: '4', j: 1 }, { i: '9', j: 1 }, { i: '5', j: 2 }, { i: '2', j: 2 }, { i: '3', j: 2 }, { i: '4', j: 2 }, { i: '9', j: 2 }, { i: '6', j: 2 }, { i: '7', j: 2 }, { i: '3', j: 3 }, { i: '4', j: 3 }, { i: '1', j: 3 }, { i: '2', j: 3 }, { i: '7', j: 3 }, { i: '3', j: 4 }, { i: '5', j: 3 }, { i: '6', j: 3 }, { i: '2', j: 4 }, { i: '7', j: 4 }, { i: '9', j: 3 }, { i: '1', j: 4 }, { i: '6', j: 4 }, { i: '4', j: 4 }, { i: '5', j: 4 }, { i: '9', j: 4 },  ], css_id: 'tinytable_css_752av2v5802ai0gcvymk',}, 
+          { positions: [ { i: '-2', j: 1 },  ], css_id: 'tinytable_css_5641it7482hfzra6pb1y',}, 
+          { positions: [ { i: '-1', j: 1 }, { i: '-1', j: 2 },  ], css_id: 'tinytable_css_qfpdtt46k5r88adbd0a2',}, 
+          { positions: [ { i: '0', j: 1 }, { i: '0', j: 2 }, { i: '0', j: 3 }, { i: '0', j: 4 },  ], css_id: 'tinytable_css_is6idzaf5mfa6zy41ctm',}, 
+          { positions: [ { i: '10', j: 0 },  ], css_id: 'tinytable_css_qlatdq4ix2gnr0vdg91m',}, 
+          { positions: [ { i: '8', j: 0 },  ], css_id: 'tinytable_css_w39ye7nsu6l3x5zn73ti',}, 
+          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 }, { i: '4', j: 0 }, { i: '5', j: 0 }, { i: '6', j: 0 }, { i: '7', j: 0 }, { i: '9', j: 0 },  ], css_id: 'tinytable_css_uupqx9k323mhv8tdxlbh',}, 
+          { positions: [ { i: '-2', j: 0 },  ], css_id: 'tinytable_css_g82d30goq2g0flcjtgok',}, 
+          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_amg8fjvpdh64jn7rjhwq',}, 
+          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_2iewheec5ggjd68zqca0',}, 
           ];
 
           // Loop over the arrays to style the cells
           cellsToStyle.forEach(function (group) {
               group.positions.forEach(function (cell) {
-                  styleCell_072qd9puh52lonc9xsbz(cell.i, cell.j, group.css_id);
+                  styleCell_6vsk0o09mdp8ch6pnm39(cell.i, cell.j, group.css_id);
               });
           });
       });
@@ -1747,23 +1747,23 @@ Figure&nbsp;6: ROC Curve
 
     <style>
       /* tinytable css entries after */
-      .table td.tinytable_css_9fdgiaalyk2d9xspsnpu, .table th.tinytable_css_9fdgiaalyk2d9xspsnpu { text-align: center; text-align: center; }
-      .table td.tinytable_css_vznyjur21obwotup9ty8, .table th.tinytable_css_vznyjur21obwotup9ty8 { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_gkr0shc6z3f2qfj7cj5g, .table th.tinytable_css_gkr0shc6z3f2qfj7cj5g { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_v8stfzhdpokgchddcymm, .table th.tinytable_css_v8stfzhdpokgchddcymm { text-align: center; border-bottom: solid black 0.05em; }
-      .table td.tinytable_css_5yq75039z05662uszkll, .table th.tinytable_css_5yq75039z05662uszkll { text-align: center; }
-      .table td.tinytable_css_dprx9mowaic01dlhacp1, .table th.tinytable_css_dprx9mowaic01dlhacp1 { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_iiff5u7fn4bh5o5fkaiz, .table th.tinytable_css_iiff5u7fn4bh5o5fkaiz { text-align: center; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_s5r2ht27v643rgiixbem, .table th.tinytable_css_s5r2ht27v643rgiixbem { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_ynjvyaq7a3zg7ayuo5w1, .table th.tinytable_css_ynjvyaq7a3zg7ayuo5w1 { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_ah419zd4j2v1kcpr7w1k, .table th.tinytable_css_ah419zd4j2v1kcpr7w1k { text-align: left; border-bottom: solid black 0.05em; }
-      .table td.tinytable_css_j8olylp34juag9ak5781, .table th.tinytable_css_j8olylp34juag9ak5781 { text-align: left; }
-      .table td.tinytable_css_x537m9qpsvb8zeo8eazh, .table th.tinytable_css_x537m9qpsvb8zeo8eazh { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_5hae5192i26j2ni2td8o, .table th.tinytable_css_5hae5192i26j2ni2td8o { text-align: left; text-align: center; }
-      .table td.tinytable_css_0e0pty962sf4rw8rcr4n, .table th.tinytable_css_0e0pty962sf4rw8rcr4n { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_suqnnn4om56q9xbgv7xr, .table th.tinytable_css_suqnnn4om56q9xbgv7xr { text-align: center; text-align: center; }
+      .table td.tinytable_css_emka4ljj5sosn8y8g07g, .table th.tinytable_css_emka4ljj5sosn8y8g07g { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_hbiwqi8vxq6kkju7d1pb, .table th.tinytable_css_hbiwqi8vxq6kkju7d1pb { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_3xezvbaq3yn4rijkgcq2, .table th.tinytable_css_3xezvbaq3yn4rijkgcq2 { text-align: center; border-bottom: solid black 0.05em; }
+      .table td.tinytable_css_752av2v5802ai0gcvymk, .table th.tinytable_css_752av2v5802ai0gcvymk { text-align: center; }
+      .table td.tinytable_css_5641it7482hfzra6pb1y, .table th.tinytable_css_5641it7482hfzra6pb1y { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_qfpdtt46k5r88adbd0a2, .table th.tinytable_css_qfpdtt46k5r88adbd0a2 { text-align: center; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_is6idzaf5mfa6zy41ctm, .table th.tinytable_css_is6idzaf5mfa6zy41ctm { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_qlatdq4ix2gnr0vdg91m, .table th.tinytable_css_qlatdq4ix2gnr0vdg91m { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_w39ye7nsu6l3x5zn73ti, .table th.tinytable_css_w39ye7nsu6l3x5zn73ti { text-align: left; border-bottom: solid black 0.05em; }
+      .table td.tinytable_css_uupqx9k323mhv8tdxlbh, .table th.tinytable_css_uupqx9k323mhv8tdxlbh { text-align: left; }
+      .table td.tinytable_css_g82d30goq2g0flcjtgok, .table th.tinytable_css_g82d30goq2g0flcjtgok { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_amg8fjvpdh64jn7rjhwq, .table th.tinytable_css_amg8fjvpdh64jn7rjhwq { text-align: left; text-align: center; }
+      .table td.tinytable_css_2iewheec5ggjd68zqca0, .table th.tinytable_css_2iewheec5ggjd68zqca0 { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
     </style>
     <div class="container">
-      <table class="table table-borderless" id="tinytable_072qd9puh52lonc9xsbz" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
+      <table class="table table-borderless" id="tinytable_6vsk0o09mdp8ch6pnm39" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
         <thead>
 <tr>
 <th scope="col" align="center" colspan="1" data-row="-2" data-col="0"> </th>
@@ -2751,84 +2751,82 @@ Reiche, F. (forthcoming). <em><span class="nocase">Introduction to Quantitative 
   });
 </script>
 <script>
-
-
-const sidebar = document.querySelector('#quarto-sidebar, .quarto-sidebar');
-const where = document.querySelector('.quarto-secondary-nav') || document.querySelector('#quarto-header');
-if (!sidebar || !where) return;
-
-
-// Collect top-level chapter links. Fallback to all links if needed.
-let links = Array.from(sidebar.querySelectorAll('.sidebar-menu > .sidebar-item > .sidebar-item-container > a.sidebar-link'));
-if (!links.length) links = Array.from(sidebar.querySelectorAll('.sidebar-link'));
-if (!links.length) return;
-
-
-const bar = document.createElement('div');
-bar.id = 'quarto-tertiary-nav';
-
-
-links.forEach(a => {
-const clone = a.cloneNode(true);
-clone.removeAttribute('data-bs-toggle');
-clone.classList.remove('sidebar-link-toggle');
-bar.appendChild(clone);
-});
-
-
-where.after(bar);
-
-
-// Ensure current page link is visible
-const current = bar.querySelector('a[aria-current="page"], a.active');
-if (current && 'scrollIntoView' in current) {
-current.scrollIntoView({behavior: 'auto', inline: 'center', block: 'nearest'});
+return links;
 }
+
+
+function ensureBar(){
+let bar = qs('#quarto-tertiary-nav');
+if (!bar){
+const anchor = findAnchor();
+if (!anchor) return null;
+bar = document.createElement('div');
+bar.id = 'quarto-tertiary-nav';
+anchor.after(bar);
+}
+return bar;
+}
+
+
+function hydrateBar(){
+const sidebar = findSidebar();
+const bar = ensureBar();
+if (!sidebar || !bar) return false;
+if (!bar.childElementCount){
+const links = collectLinks(sidebar);
+links.forEach(a => {
+const c = a.cloneNode(true);
+c.removeAttribute('data-bs-toggle');
+c.classList.remove('sidebar-link-toggle');
+bar.appendChild(c);
+});
+}
+// Mark current page
+qsa('a', bar).forEach(a => {
+if (a.pathname === location.pathname && (!a.hash || a.hash === location.hash)){
+a.setAttribute('aria-current','page');
+a.classList.add('active');
+}
+});
+const current = qs('a[aria-current="page"], a.active', bar);
+if (current && current.scrollIntoView) current.scrollIntoView({behavior:'auto', inline:'center', block:'nearest'});
+return true;
 }
 
 
 function setHeights(){
-const primary = document.getElementById('quarto-header');
-const secondary = document.querySelector('.quarto-secondary-nav');
-const rootStyle = document.documentElement.style;
-rootStyle.setProperty('--primary-height', (primary ? primary.offsetHeight : 44) + 'px');
-rootStyle.setProperty('--secondary-height', (secondary ? secondary.offsetHeight : 44) + 'px');
+const header = qs('#quarto-header');
+const secondary = qs('.quarto-secondary-nav');
+const root = document.documentElement.style;
+root.setProperty('--primary-height', (header ? header.offsetHeight : 44) + 'px');
+root.setProperty('--secondary-height', (secondary ? secondary.offsetHeight : 0) + 'px');
 }
 
 
-// Hide/Show on scroll (Headroom-style, tiny + dependency-free)
-let lastY = window.scrollY;
-let acc = 0;
-const threshold = 24; // px accumulated before toggling, to avoid jitter
-
-
+// Hide/show on scroll (mobile only)
+let lastY = 0, acc = 0; const threshold = 24;
 function onScroll(){
-if (!isMobile()) return;
-const y = window.scrollY;
-const dy = y - lastY;
-acc = (dy > 0) ? Math.min(96, acc + dy) : Math.max(-96, acc + dy);
-if (acc > threshold) {
-document.documentElement.classList.add('nav-hidden');
-} else if (acc < -threshold || y < 2) {
-document.documentElement.classList.remove('nav-hidden');
-}
-lastY = y;
+if (!window.matchMedia('(max-width: 991.98px)').matches) return;
+const y = window.scrollY, dy = y - lastY; lastY = y;
+acc = Math.max(-96, Math.min(96, acc + dy));
+if (acc > threshold) document.documentElement.classList.add('nav-hidden');
+else if (acc < -threshold || y < 2) document.documentElement.classList.remove('nav-hidden');
 }
 
 
 function init(){
-if (!isMobile()) return; // desktop unchanged
-buildTertiary();
+hydrateBar();
 setHeights();
-window.addEventListener('resize', setHeights, {passive: true});
-window.addEventListener('scroll', onScroll, {passive: true});
-// Recalc after fonts/images settle
-window.setTimeout(setHeights, 300);
-window.addEventListener('load', setHeights);
+window.addEventListener('resize', setHeights, {passive:true});
+window.addEventListener('scroll', onScroll, {passive:true});
 }
 
 
+// Run now, on DOM ready, and when DOM mutates (e.g., sidebar injected)
+if (document.readyState !== 'loading') init();
 document.addEventListener('DOMContentLoaded', init);
+const mo = new MutationObserver(() => { if (hydrateBar()) setHeights(); });
+mo.observe(document.documentElement, {childList:true, subtree:true});
 })();
 </script>
 <script id="quarto-html-after-body" type="application/javascript">
