--- a/10-PO33Q.html
+++ b/10-PO33Q.html
@@ -310,84 +310,82 @@ Concluding Remarks
   });
 </script>
 <script>
-
-
-const sidebar = document.querySelector('#quarto-sidebar, .quarto-sidebar');
-const where = document.querySelector('.quarto-secondary-nav') || document.querySelector('#quarto-header');
-if (!sidebar || !where) return;
-
-
-// Collect top-level chapter links. Fallback to all links if needed.
-let links = Array.from(sidebar.querySelectorAll('.sidebar-menu > .sidebar-item > .sidebar-item-container > a.sidebar-link'));
-if (!links.length) links = Array.from(sidebar.querySelectorAll('.sidebar-link'));
-if (!links.length) return;
-
-
-const bar = document.createElement('div');
-bar.id = 'quarto-tertiary-nav';
-
-
-links.forEach(a => {
-const clone = a.cloneNode(true);
-clone.removeAttribute('data-bs-toggle');
-clone.classList.remove('sidebar-link-toggle');
-bar.appendChild(clone);
-});
-
-
-where.after(bar);
-
-
-// Ensure current page link is visible
-const current = bar.querySelector('a[aria-current="page"], a.active');
-if (current && 'scrollIntoView' in current) {
-current.scrollIntoView({behavior: 'auto', inline: 'center', block: 'nearest'});
+return links;
 }
+
+
+function ensureBar(){
+let bar = qs('#quarto-tertiary-nav');
+if (!bar){
+const anchor = findAnchor();
+if (!anchor) return null;
+bar = document.createElement('div');
+bar.id = 'quarto-tertiary-nav';
+anchor.after(bar);
+}
+return bar;
+}
+
+
+function hydrateBar(){
+const sidebar = findSidebar();
+const bar = ensureBar();
+if (!sidebar || !bar) return false;
+if (!bar.childElementCount){
+const links = collectLinks(sidebar);
+links.forEach(a => {
+const c = a.cloneNode(true);
+c.removeAttribute('data-bs-toggle');
+c.classList.remove('sidebar-link-toggle');
+bar.appendChild(c);
+});
+}
+// Mark current page
+qsa('a', bar).forEach(a => {
+if (a.pathname === location.pathname && (!a.hash || a.hash === location.hash)){
+a.setAttribute('aria-current','page');
+a.classList.add('active');
+}
+});
+const current = qs('a[aria-current="page"], a.active', bar);
+if (current && current.scrollIntoView) current.scrollIntoView({behavior:'auto', inline:'center', block:'nearest'});
+return true;
 }
 
 
 function setHeights(){
-const primary = document.getElementById('quarto-header');
-const secondary = document.querySelector('.quarto-secondary-nav');
-const rootStyle = document.documentElement.style;
-rootStyle.setProperty('--primary-height', (primary ? primary.offsetHeight : 44) + 'px');
-rootStyle.setProperty('--secondary-height', (secondary ? secondary.offsetHeight : 44) + 'px');
+const header = qs('#quarto-header');
+const secondary = qs('.quarto-secondary-nav');
+const root = document.documentElement.style;
+root.setProperty('--primary-height', (header ? header.offsetHeight : 44) + 'px');
+root.setProperty('--secondary-height', (secondary ? secondary.offsetHeight : 0) + 'px');
 }
 
 
-// Hide/Show on scroll (Headroom-style, tiny + dependency-free)
-let lastY = window.scrollY;
-let acc = 0;
-const threshold = 24; // px accumulated before toggling, to avoid jitter
-
-
+// Hide/show on scroll (mobile only)
+let lastY = 0, acc = 0; const threshold = 24;
 function onScroll(){
-if (!isMobile()) return;
-const y = window.scrollY;
-const dy = y - lastY;
-acc = (dy > 0) ? Math.min(96, acc + dy) : Math.max(-96, acc + dy);
-if (acc > threshold) {
-document.documentElement.classList.add('nav-hidden');
-} else if (acc < -threshold || y < 2) {
-document.documentElement.classList.remove('nav-hidden');
-}
-lastY = y;
+if (!window.matchMedia('(max-width: 991.98px)').matches) return;
+const y = window.scrollY, dy = y - lastY; lastY = y;
+acc = Math.max(-96, Math.min(96, acc + dy));
+if (acc > threshold) document.documentElement.classList.add('nav-hidden');
+else if (acc < -threshold || y < 2) document.documentElement.classList.remove('nav-hidden');
 }
 
 
 function init(){
-if (!isMobile()) return; // desktop unchanged
-buildTertiary();
+hydrateBar();
 setHeights();
-window.addEventListener('resize', setHeights, {passive: true});
-window.addEventListener('scroll', onScroll, {passive: true});
-// Recalc after fonts/images settle
-window.setTimeout(setHeights, 300);
-window.addEventListener('load', setHeights);
+window.addEventListener('resize', setHeights, {passive:true});
+window.addEventListener('scroll', onScroll, {passive:true});
 }
 
 
+// Run now, on DOM ready, and when DOM mutates (e.g., sidebar injected)
+if (document.readyState !== 'loading') init();
 document.addEventListener('DOMContentLoaded', init);
+const mo = new MutationObserver(() => { if (hydrateBar()) setHeights(); });
+mo.observe(document.documentElement, {childList:true, subtree:true});
 })();
 </script>
 <script id="quarto-html-after-body" type="application/javascript">
