--- a/03-PO33Q.html
+++ b/03-PO33Q.html
@@ -86,6 +86,7 @@ div.csl-indent {
 <meta name="quarto:offset" content="./">
 <link href="./04-PO33Q.html" rel="next">
 <link href="./02-PO33Q.html" rel="prev">
+<link href="./images/Crest_white.png" rel="icon" type="image/png">
 <script src="site_libs/quarto-html/quarto.js" type="module"></script>
 <script src="site_libs/quarto-html/tabsets/tabsets.js" type="module"></script>
 <script src="site_libs/quarto-html/popper.min.js"></script>
@@ -221,7 +222,7 @@ window.Quarto = {
     <ul class="list-unstyled mt-1">
         <li class="sidebar-item">
   <div class="sidebar-item-container"> 
-  <a href="./index.html" class="sidebar-item-text sidebar-link"><span class="chapter-title">Preface</span></a>
+  <a href="./index.html" class="sidebar-item-text sidebar-link"><span class="chapter-title">Welcome</span></a>
   </div>
 </li>
         <li class="sidebar-item">
@@ -296,7 +297,7 @@ window.Quarto = {
 <!-- margin-sidebar -->
     <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
         <nav id="TOC" role="doc-toc" class="toc-active">
-    <h2 id="toc-title">Table of contents</h2>
+    <h2 id="toc-title">Week 3</h2>
    
   <ul>
   <li><a href="#road-map-for-today" id="toc-road-map-for-today" class="nav-link active" data-scroll-target="#road-map-for-today">Road Map for Today</a>
@@ -703,8 +704,8 @@ Number of Fisher Scoring iterations: 5</code></pre>
 
     <script>
 
-      function styleCell_fcxywni68eytqgpgd2hf(i, j, css_id) {
-          var table = document.getElementById("tinytable_fcxywni68eytqgpgd2hf");
+      function styleCell_sjnhfakwq5e4oxzjgjia(i, j, css_id) {
+          var table = document.getElementById("tinytable_sjnhfakwq5e4oxzjgjia");
           var cell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
           if (cell) {
               console.log(`Styling cell at (${i}, ${j}) with class ${css_id}`);
@@ -713,8 +714,8 @@ Number of Fisher Scoring iterations: 5</code></pre>
               console.warn(`Cell at (${i}, ${j}) not found.`);
           }
       }
-      function spanCell_fcxywni68eytqgpgd2hf(i, j, rowspan, colspan) {
-        var table = document.getElementById("tinytable_fcxywni68eytqgpgd2hf");
+      function spanCell_sjnhfakwq5e4oxzjgjia(i, j, rowspan, colspan) {
+        var table = document.getElementById("tinytable_sjnhfakwq5e4oxzjgjia");
         const targetCell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
         if (!targetCell) {
           console.warn(`Cell at (${i}, ${j}) not found.`);
@@ -745,20 +746,20 @@ Number of Fisher Scoring iterations: 5</code></pre>
       window.addEventListener('load', function () {
           var cellsToStyle = [
             // tinytable style arrays after
-          { positions: [ { i: '4', j: 1 },  ], css_id: 'tinytable_css_ndp6x3hektckudaygb6z',}, 
-          { positions: [ { i: '1', j: 1 }, { i: '2', j: 1 }, { i: '3', j: 1 },  ], css_id: 'tinytable_css_59ag62ota9wuo457mogq',}, 
-          { positions: [ { i: '-1', j: 1 },  ], css_id: 'tinytable_css_7v0k36njdryk7v36rxte',}, 
-          { positions: [ { i: '0', j: 1 },  ], css_id: 'tinytable_css_sjhx5ucmhvu03jz57pc8',}, 
-          { positions: [ { i: '4', j: 0 },  ], css_id: 'tinytable_css_lcx2dblpzk92vnfpncf4',}, 
-          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 },  ], css_id: 'tinytable_css_dzp27w6m91x2cm8sxfqr',}, 
-          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_bnra4vza2rvit8yo9xu9',}, 
-          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_ss86u06zm2dczfb279mg',}, 
+          { positions: [ { i: '4', j: 1 },  ], css_id: 'tinytable_css_cnhyfi4e722dodoex0c9',}, 
+          { positions: [ { i: '1', j: 1 }, { i: '2', j: 1 }, { i: '3', j: 1 },  ], css_id: 'tinytable_css_vfshmw1ysao874ystr5k',}, 
+          { positions: [ { i: '-1', j: 1 },  ], css_id: 'tinytable_css_nqqm64ckvujfs8dac11u',}, 
+          { positions: [ { i: '0', j: 1 },  ], css_id: 'tinytable_css_m3f3rgm5khmdmfs8g313',}, 
+          { positions: [ { i: '4', j: 0 },  ], css_id: 'tinytable_css_vz80c03cvlcy8v7bwbtc',}, 
+          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 },  ], css_id: 'tinytable_css_1mtsog1w4vyirf1s93js',}, 
+          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_ja3hj4vhxciho0qzwm4c',}, 
+          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_97xduydr0wd83wm07h6i',}, 
           ];
 
           // Loop over the arrays to style the cells
           cellsToStyle.forEach(function (group) {
               group.positions.forEach(function (cell) {
-                  styleCell_fcxywni68eytqgpgd2hf(cell.i, cell.j, group.css_id);
+                  styleCell_sjnhfakwq5e4oxzjgjia(cell.i, cell.j, group.css_id);
               });
           });
       });
@@ -766,17 +767,17 @@ Number of Fisher Scoring iterations: 5</code></pre>
 
     <style>
       /* tinytable css entries after */
-      .table td.tinytable_css_ndp6x3hektckudaygb6z, .table th.tinytable_css_ndp6x3hektckudaygb6z { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_59ag62ota9wuo457mogq, .table th.tinytable_css_59ag62ota9wuo457mogq { text-align: center; }
-      .table td.tinytable_css_7v0k36njdryk7v36rxte, .table th.tinytable_css_7v0k36njdryk7v36rxte { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_sjhx5ucmhvu03jz57pc8, .table th.tinytable_css_sjhx5ucmhvu03jz57pc8 { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_lcx2dblpzk92vnfpncf4, .table th.tinytable_css_lcx2dblpzk92vnfpncf4 { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_dzp27w6m91x2cm8sxfqr, .table th.tinytable_css_dzp27w6m91x2cm8sxfqr { text-align: left; }
-      .table td.tinytable_css_bnra4vza2rvit8yo9xu9, .table th.tinytable_css_bnra4vza2rvit8yo9xu9 { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_ss86u06zm2dczfb279mg, .table th.tinytable_css_ss86u06zm2dczfb279mg { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_cnhyfi4e722dodoex0c9, .table th.tinytable_css_cnhyfi4e722dodoex0c9 { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_vfshmw1ysao874ystr5k, .table th.tinytable_css_vfshmw1ysao874ystr5k { text-align: center; }
+      .table td.tinytable_css_nqqm64ckvujfs8dac11u, .table th.tinytable_css_nqqm64ckvujfs8dac11u { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_m3f3rgm5khmdmfs8g313, .table th.tinytable_css_m3f3rgm5khmdmfs8g313 { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_vz80c03cvlcy8v7bwbtc, .table th.tinytable_css_vz80c03cvlcy8v7bwbtc { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_1mtsog1w4vyirf1s93js, .table th.tinytable_css_1mtsog1w4vyirf1s93js { text-align: left; }
+      .table td.tinytable_css_ja3hj4vhxciho0qzwm4c, .table th.tinytable_css_ja3hj4vhxciho0qzwm4c { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_97xduydr0wd83wm07h6i, .table th.tinytable_css_97xduydr0wd83wm07h6i { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
     </style>
     <div class="container">
-      <table class="table table-borderless" id="tinytable_fcxywni68eytqgpgd2hf" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
+      <table class="table table-borderless" id="tinytable_sjnhfakwq5e4oxzjgjia" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
         <thead>
 <tr>
 <th scope="col" align="center" colspan="1" data-row="-1" data-col="0"> </th>
@@ -880,8 +881,8 @@ Table&nbsp;1: Influence of per capita GDP on Democracy
 
     <script>
 
-      function styleCell_70oftqlmvgn1ilxfj30m(i, j, css_id) {
-          var table = document.getElementById("tinytable_70oftqlmvgn1ilxfj30m");
+      function styleCell_cr8uqqjyigwm6fhmt8ys(i, j, css_id) {
+          var table = document.getElementById("tinytable_cr8uqqjyigwm6fhmt8ys");
           var cell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
           if (cell) {
               console.log(`Styling cell at (${i}, ${j}) with class ${css_id}`);
@@ -890,8 +891,8 @@ Table&nbsp;1: Influence of per capita GDP on Democracy
               console.warn(`Cell at (${i}, ${j}) not found.`);
           }
       }
-      function spanCell_70oftqlmvgn1ilxfj30m(i, j, rowspan, colspan) {
-        var table = document.getElementById("tinytable_70oftqlmvgn1ilxfj30m");
+      function spanCell_cr8uqqjyigwm6fhmt8ys(i, j, rowspan, colspan) {
+        var table = document.getElementById("tinytable_cr8uqqjyigwm6fhmt8ys");
         const targetCell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
         if (!targetCell) {
           console.warn(`Cell at (${i}, ${j}) not found.`);
@@ -922,20 +923,20 @@ Table&nbsp;1: Influence of per capita GDP on Democracy
       window.addEventListener('load', function () {
           var cellsToStyle = [
             // tinytable style arrays after
-          { positions: [ { i: '4', j: 1 },  ], css_id: 'tinytable_css_cs5uw77qd4kcbr6zzmmp',}, 
-          { positions: [ { i: '1', j: 1 }, { i: '2', j: 1 }, { i: '3', j: 1 },  ], css_id: 'tinytable_css_lsyc70tidqdwc1rt1p65',}, 
-          { positions: [ { i: '-1', j: 1 },  ], css_id: 'tinytable_css_1b70n2j3ztshmlgglzaf',}, 
-          { positions: [ { i: '0', j: 1 },  ], css_id: 'tinytable_css_njycospyhzbhuzhem9ug',}, 
-          { positions: [ { i: '4', j: 0 },  ], css_id: 'tinytable_css_asx1ckmlip7j1z30qh51',}, 
-          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 },  ], css_id: 'tinytable_css_fmipzwisbrpm1uzi7arr',}, 
-          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_cvn8rn4cvzfvedq9usuo',}, 
-          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_m2o7g0s0e55wu0votf4h',}, 
+          { positions: [ { i: '4', j: 1 },  ], css_id: 'tinytable_css_hmojc96p454fn6aixllb',}, 
+          { positions: [ { i: '1', j: 1 }, { i: '2', j: 1 }, { i: '3', j: 1 },  ], css_id: 'tinytable_css_6t7cvr9g8gqj4x0hfyn2',}, 
+          { positions: [ { i: '-1', j: 1 },  ], css_id: 'tinytable_css_t62ag0uuyc7tl1m0u4uw',}, 
+          { positions: [ { i: '0', j: 1 },  ], css_id: 'tinytable_css_aus0wppkxqle487p6tw0',}, 
+          { positions: [ { i: '4', j: 0 },  ], css_id: 'tinytable_css_4qybyz5b2o8nizi9s5er',}, 
+          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 },  ], css_id: 'tinytable_css_f3rc6i0cx8yneursutjr',}, 
+          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_ewvwqhsq6nyr3huv3cck',}, 
+          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_zlpfccdqhduuwqaetlio',}, 
           ];
 
           // Loop over the arrays to style the cells
           cellsToStyle.forEach(function (group) {
               group.positions.forEach(function (cell) {
-                  styleCell_70oftqlmvgn1ilxfj30m(cell.i, cell.j, group.css_id);
+                  styleCell_cr8uqqjyigwm6fhmt8ys(cell.i, cell.j, group.css_id);
               });
           });
       });
@@ -943,17 +944,17 @@ Table&nbsp;1: Influence of per capita GDP on Democracy
 
     <style>
       /* tinytable css entries after */
-      .table td.tinytable_css_cs5uw77qd4kcbr6zzmmp, .table th.tinytable_css_cs5uw77qd4kcbr6zzmmp { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_lsyc70tidqdwc1rt1p65, .table th.tinytable_css_lsyc70tidqdwc1rt1p65 { text-align: center; }
-      .table td.tinytable_css_1b70n2j3ztshmlgglzaf, .table th.tinytable_css_1b70n2j3ztshmlgglzaf { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_njycospyhzbhuzhem9ug, .table th.tinytable_css_njycospyhzbhuzhem9ug { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_asx1ckmlip7j1z30qh51, .table th.tinytable_css_asx1ckmlip7j1z30qh51 { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_fmipzwisbrpm1uzi7arr, .table th.tinytable_css_fmipzwisbrpm1uzi7arr { text-align: left; }
-      .table td.tinytable_css_cvn8rn4cvzfvedq9usuo, .table th.tinytable_css_cvn8rn4cvzfvedq9usuo { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_m2o7g0s0e55wu0votf4h, .table th.tinytable_css_m2o7g0s0e55wu0votf4h { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_hmojc96p454fn6aixllb, .table th.tinytable_css_hmojc96p454fn6aixllb { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_6t7cvr9g8gqj4x0hfyn2, .table th.tinytable_css_6t7cvr9g8gqj4x0hfyn2 { text-align: center; }
+      .table td.tinytable_css_t62ag0uuyc7tl1m0u4uw, .table th.tinytable_css_t62ag0uuyc7tl1m0u4uw { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_aus0wppkxqle487p6tw0, .table th.tinytable_css_aus0wppkxqle487p6tw0 { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_4qybyz5b2o8nizi9s5er, .table th.tinytable_css_4qybyz5b2o8nizi9s5er { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_f3rc6i0cx8yneursutjr, .table th.tinytable_css_f3rc6i0cx8yneursutjr { text-align: left; }
+      .table td.tinytable_css_ewvwqhsq6nyr3huv3cck, .table th.tinytable_css_ewvwqhsq6nyr3huv3cck { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_zlpfccdqhduuwqaetlio, .table th.tinytable_css_zlpfccdqhduuwqaetlio { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
     </style>
     <div class="container">
-      <table class="table table-borderless" id="tinytable_70oftqlmvgn1ilxfj30m" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
+      <table class="table table-borderless" id="tinytable_cr8uqqjyigwm6fhmt8ys" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
         <thead>
 <tr>
 <th scope="col" align="center" colspan="1" data-row="-1" data-col="0"> </th>
