--- a/04-PO33Q.html
+++ b/04-PO33Q.html
@@ -51,6 +51,7 @@ div.csl-indent {
 <meta name="quarto:offset" content="./">
 <link href="./05-PO33Q.html" rel="next">
 <link href="./03-PO33Q.html" rel="prev">
+<link href="./images/Crest_white.png" rel="icon" type="image/png">
 <script src="site_libs/quarto-html/quarto.js" type="module"></script>
 <script src="site_libs/quarto-html/tabsets/tabsets.js" type="module"></script>
 <script src="site_libs/quarto-html/popper.min.js"></script>
@@ -157,7 +158,7 @@ window.MathJax = {
     <ul class="list-unstyled mt-1">
         <li class="sidebar-item">
   <div class="sidebar-item-container"> 
-  <a href="./index.html" class="sidebar-item-text sidebar-link"><span class="chapter-title">Preface</span></a>
+  <a href="./index.html" class="sidebar-item-text sidebar-link"><span class="chapter-title">Welcome</span></a>
   </div>
 </li>
         <li class="sidebar-item">
@@ -232,7 +233,7 @@ window.MathJax = {
 <!-- margin-sidebar -->
     <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
         <nav id="TOC" role="doc-toc" class="toc-active">
-    <h2 id="toc-title">Table of contents</h2>
+    <h2 id="toc-title">Week 4</h2>
    
   <ul>
   <li><a href="#road-map-for-today" id="toc-road-map-for-today" class="nav-link active" data-scroll-target="#road-map-for-today">Road Map for Today</a>
@@ -790,8 +791,8 @@ Table&nbsp;3: What is left…
 
     <script>
 
-      function styleCell_lbjxj0bkebpo4ier4s9i(i, j, css_id) {
-          var table = document.getElementById("tinytable_lbjxj0bkebpo4ier4s9i");
+      function styleCell_g5o7nggmdxj24yilac39(i, j, css_id) {
+          var table = document.getElementById("tinytable_g5o7nggmdxj24yilac39");
           var cell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
           if (cell) {
               console.log(`Styling cell at (${i}, ${j}) with class ${css_id}`);
@@ -800,8 +801,8 @@ Table&nbsp;3: What is left…
               console.warn(`Cell at (${i}, ${j}) not found.`);
           }
       }
-      function spanCell_lbjxj0bkebpo4ier4s9i(i, j, rowspan, colspan) {
-        var table = document.getElementById("tinytable_lbjxj0bkebpo4ier4s9i");
+      function spanCell_g5o7nggmdxj24yilac39(i, j, rowspan, colspan) {
+        var table = document.getElementById("tinytable_g5o7nggmdxj24yilac39");
         const targetCell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
         if (!targetCell) {
           console.warn(`Cell at (${i}, ${j}) not found.`);
@@ -832,21 +833,21 @@ Table&nbsp;3: What is left…
       window.addEventListener('load', function () {
           var cellsToStyle = [
             // tinytable style arrays after
-          { positions: [ { i: '-1', j: 2 }, { i: '-1', j: 3 },  ], css_id: 'tinytable_css_ujbzpc3lw2da2zoorykk',}, 
-          { positions: [ { i: '6', j: 1 }, { i: '6', j: 2 }, { i: '6', j: 3 },  ], css_id: 'tinytable_css_udi4srbnypl9innhn81b',}, 
-          { positions: [ { i: '1', j: 1 }, { i: '2', j: 1 }, { i: '4', j: 1 }, { i: '5', j: 1 }, { i: '2', j: 2 }, { i: '4', j: 2 }, { i: '1', j: 2 }, { i: '2', j: 3 }, { i: '3', j: 1 }, { i: '4', j: 3 }, { i: '5', j: 2 }, { i: '3', j: 2 }, { i: '1', j: 3 }, { i: '3', j: 3 }, { i: '5', j: 3 },  ], css_id: 'tinytable_css_vx7rzu3x4xo3xlv3bglz',}, 
-          { positions: [ { i: '-1', j: 1 },  ], css_id: 'tinytable_css_m3wq7eylgzuz37spmjz9',}, 
-          { positions: [ { i: '0', j: 1 }, { i: '0', j: 2 }, { i: '0', j: 3 },  ], css_id: 'tinytable_css_mafgt7hxde1vg2ssild6',}, 
-          { positions: [ { i: '6', j: 0 },  ], css_id: 'tinytable_css_gmrx7siwqlhf0uinzlpn',}, 
-          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 }, { i: '4', j: 0 }, { i: '5', j: 0 },  ], css_id: 'tinytable_css_srvbdny8hfurcpomfvsl',}, 
-          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_15td28ickcqj98lcpenc',}, 
-          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_3pzf3qpnvd2x6m2139lh',}, 
+          { positions: [ { i: '-1', j: 2 }, { i: '-1', j: 3 },  ], css_id: 'tinytable_css_p42wvv9vjcphtrdcy374',}, 
+          { positions: [ { i: '6', j: 1 }, { i: '6', j: 2 }, { i: '6', j: 3 },  ], css_id: 'tinytable_css_67vega4i3xu2xmn19du4',}, 
+          { positions: [ { i: '1', j: 1 }, { i: '2', j: 1 }, { i: '4', j: 1 }, { i: '5', j: 1 }, { i: '2', j: 2 }, { i: '4', j: 2 }, { i: '1', j: 2 }, { i: '2', j: 3 }, { i: '3', j: 1 }, { i: '4', j: 3 }, { i: '5', j: 2 }, { i: '3', j: 2 }, { i: '1', j: 3 }, { i: '3', j: 3 }, { i: '5', j: 3 },  ], css_id: 'tinytable_css_gx3hh5p6vn7y0xzbygnh',}, 
+          { positions: [ { i: '-1', j: 1 },  ], css_id: 'tinytable_css_1wet6xahqa5hcpk9tgj7',}, 
+          { positions: [ { i: '0', j: 1 }, { i: '0', j: 2 }, { i: '0', j: 3 },  ], css_id: 'tinytable_css_9irabt6fmnauxxu5jysk',}, 
+          { positions: [ { i: '6', j: 0 },  ], css_id: 'tinytable_css_s3bi6qjzpooq78suoy1e',}, 
+          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 }, { i: '4', j: 0 }, { i: '5', j: 0 },  ], css_id: 'tinytable_css_akobfd17xb6h9pekunuw',}, 
+          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_44df85er8mv3lskwb8rr',}, 
+          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_1fo0av39o52k6vg7odcn',}, 
           ];
 
           // Loop over the arrays to style the cells
           cellsToStyle.forEach(function (group) {
               group.positions.forEach(function (cell) {
-                  styleCell_lbjxj0bkebpo4ier4s9i(cell.i, cell.j, group.css_id);
+                  styleCell_g5o7nggmdxj24yilac39(cell.i, cell.j, group.css_id);
               });
           });
       });
@@ -854,18 +855,18 @@ Table&nbsp;3: What is left…
 
     <style>
       /* tinytable css entries after */
-      .table td.tinytable_css_ujbzpc3lw2da2zoorykk, .table th.tinytable_css_ujbzpc3lw2da2zoorykk { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_udi4srbnypl9innhn81b, .table th.tinytable_css_udi4srbnypl9innhn81b { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_vx7rzu3x4xo3xlv3bglz, .table th.tinytable_css_vx7rzu3x4xo3xlv3bglz { text-align: center; }
-      .table td.tinytable_css_m3wq7eylgzuz37spmjz9, .table th.tinytable_css_m3wq7eylgzuz37spmjz9 { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_mafgt7hxde1vg2ssild6, .table th.tinytable_css_mafgt7hxde1vg2ssild6 { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_gmrx7siwqlhf0uinzlpn, .table th.tinytable_css_gmrx7siwqlhf0uinzlpn { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_srvbdny8hfurcpomfvsl, .table th.tinytable_css_srvbdny8hfurcpomfvsl { text-align: left; }
-      .table td.tinytable_css_15td28ickcqj98lcpenc, .table th.tinytable_css_15td28ickcqj98lcpenc { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_3pzf3qpnvd2x6m2139lh, .table th.tinytable_css_3pzf3qpnvd2x6m2139lh { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_p42wvv9vjcphtrdcy374, .table th.tinytable_css_p42wvv9vjcphtrdcy374 { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_67vega4i3xu2xmn19du4, .table th.tinytable_css_67vega4i3xu2xmn19du4 { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_gx3hh5p6vn7y0xzbygnh, .table th.tinytable_css_gx3hh5p6vn7y0xzbygnh { text-align: center; }
+      .table td.tinytable_css_1wet6xahqa5hcpk9tgj7, .table th.tinytable_css_1wet6xahqa5hcpk9tgj7 { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_9irabt6fmnauxxu5jysk, .table th.tinytable_css_9irabt6fmnauxxu5jysk { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_s3bi6qjzpooq78suoy1e, .table th.tinytable_css_s3bi6qjzpooq78suoy1e { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_akobfd17xb6h9pekunuw, .table th.tinytable_css_akobfd17xb6h9pekunuw { text-align: left; }
+      .table td.tinytable_css_44df85er8mv3lskwb8rr, .table th.tinytable_css_44df85er8mv3lskwb8rr { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_1fo0av39o52k6vg7odcn, .table th.tinytable_css_1fo0av39o52k6vg7odcn { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
     </style>
     <div class="container">
-      <table class="table table-borderless" id="tinytable_lbjxj0bkebpo4ier4s9i" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
+      <table class="table table-borderless" id="tinytable_g5o7nggmdxj24yilac39" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
         <thead>
 <tr>
 <th scope="col" align="center" colspan="1" data-row="-1" data-col="0"> </th>
