--- a/07-PO33Q.html
+++ b/07-PO33Q.html
@@ -86,6 +86,7 @@ div.csl-indent {
 <meta name="quarto:offset" content="./">
 <link href="./08-PO33Q.html" rel="next">
 <link href="./05-PO33Q.html" rel="prev">
+<link href="./images/Crest_white.png" rel="icon" type="image/png">
 <script src="site_libs/quarto-html/quarto.js" type="module"></script>
 <script src="site_libs/quarto-html/tabsets/tabsets.js" type="module"></script>
 <script src="site_libs/quarto-html/popper.min.js"></script>
@@ -223,7 +224,7 @@ window.Quarto = {
     <ul class="list-unstyled mt-1">
         <li class="sidebar-item">
   <div class="sidebar-item-container"> 
-  <a href="./index.html" class="sidebar-item-text sidebar-link"><span class="chapter-title">Preface</span></a>
+  <a href="./index.html" class="sidebar-item-text sidebar-link"><span class="chapter-title">Welcome</span></a>
   </div>
 </li>
         <li class="sidebar-item">
@@ -298,7 +299,7 @@ window.Quarto = {
 <!-- margin-sidebar -->
     <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
         <nav id="TOC" role="doc-toc" class="toc-active">
-    <h2 id="toc-title">Table of contents</h2>
+    <h2 id="toc-title">Week 7</h2>
    
   <ul>
   <li><a href="#road-map-for-today" id="toc-road-map-for-today" class="nav-link active" data-scroll-target="#road-map-for-today">Road Map for Today</a>
@@ -1678,8 +1679,8 @@ Figure&nbsp;6: ROC Curve
 
     <script>
 
-      function styleCell_ecde6kuhysvr8x573o7b(i, j, css_id) {
-          var table = document.getElementById("tinytable_ecde6kuhysvr8x573o7b");
+      function styleCell_4grsmba67rlypprml6f2(i, j, css_id) {
+          var table = document.getElementById("tinytable_4grsmba67rlypprml6f2");
           var cell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
           if (cell) {
               console.log(`Styling cell at (${i}, ${j}) with class ${css_id}`);
@@ -1688,8 +1689,8 @@ Figure&nbsp;6: ROC Curve
               console.warn(`Cell at (${i}, ${j}) not found.`);
           }
       }
-      function spanCell_ecde6kuhysvr8x573o7b(i, j, rowspan, colspan) {
-        var table = document.getElementById("tinytable_ecde6kuhysvr8x573o7b");
+      function spanCell_4grsmba67rlypprml6f2(i, j, rowspan, colspan) {
+        var table = document.getElementById("tinytable_4grsmba67rlypprml6f2");
         const targetCell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
         if (!targetCell) {
           console.warn(`Cell at (${i}, ${j}) not found.`);
@@ -1720,26 +1721,26 @@ Figure&nbsp;6: ROC Curve
       window.addEventListener('load', function () {
           var cellsToStyle = [
             // tinytable style arrays after
-          { positions: [ { i: '-1', j: 4 }, { i: '-1', j: 3 },  ], css_id: 'tinytable_css_ipiaharb2ljj6siyicmy',}, 
-          { positions: [ { i: '-2', j: 3 }, { i: '-2', j: 2 }, { i: '-2', j: 4 },  ], css_id: 'tinytable_css_6lzfxjwfbfrq2dwpqamy',}, 
-          { positions: [ { i: '10', j: 1 }, { i: '10', j: 4 }, { i: '10', j: 2 }, { i: '10', j: 3 },  ], css_id: 'tinytable_css_a7am2ytnxjfhaqpm6g9i',}, 
-          { positions: [ { i: '8', j: 3 }, { i: '8', j: 2 }, { i: '8', j: 4 }, { i: '8', j: 1 },  ], css_id: 'tinytable_css_t3k8dscnbz1iglglzapp',}, 
-          { positions: [ { i: '2', j: 1 }, { i: '1', j: 1 }, { i: '6', j: 1 }, { i: '3', j: 1 }, { i: '5', j: 1 }, { i: '1', j: 2 }, { i: '7', j: 1 }, { i: '4', j: 1 }, { i: '9', j: 1 }, { i: '5', j: 2 }, { i: '2', j: 2 }, { i: '3', j: 2 }, { i: '4', j: 2 }, { i: '9', j: 2 }, { i: '6', j: 2 }, { i: '7', j: 2 }, { i: '3', j: 3 }, { i: '4', j: 3 }, { i: '1', j: 3 }, { i: '2', j: 3 }, { i: '7', j: 3 }, { i: '3', j: 4 }, { i: '5', j: 3 }, { i: '6', j: 3 }, { i: '2', j: 4 }, { i: '7', j: 4 }, { i: '9', j: 3 }, { i: '1', j: 4 }, { i: '6', j: 4 }, { i: '4', j: 4 }, { i: '5', j: 4 }, { i: '9', j: 4 },  ], css_id: 'tinytable_css_6b4neiybn7e0y2okwy4v',}, 
-          { positions: [ { i: '-2', j: 1 },  ], css_id: 'tinytable_css_pvpkx93fuwn9f2zdsm2q',}, 
-          { positions: [ { i: '-1', j: 1 }, { i: '-1', j: 2 },  ], css_id: 'tinytable_css_ssyiu3elxcwmtbuoco0v',}, 
-          { positions: [ { i: '0', j: 1 }, { i: '0', j: 2 }, { i: '0', j: 3 }, { i: '0', j: 4 },  ], css_id: 'tinytable_css_ghibax2yymf7xya68rtn',}, 
-          { positions: [ { i: '10', j: 0 },  ], css_id: 'tinytable_css_ya1clfw8jqjsb588zizd',}, 
-          { positions: [ { i: '8', j: 0 },  ], css_id: 'tinytable_css_azh75j2xzv8wdr0cjyjx',}, 
-          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 }, { i: '4', j: 0 }, { i: '5', j: 0 }, { i: '6', j: 0 }, { i: '7', j: 0 }, { i: '9', j: 0 },  ], css_id: 'tinytable_css_5ko504kk9vjahi22b8py',}, 
-          { positions: [ { i: '-2', j: 0 },  ], css_id: 'tinytable_css_751pe1d1usjgc6osmlvj',}, 
-          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_l4jsiatjad6l7up7slur',}, 
-          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_wgx3o392qo1cora8lzl4',}, 
+          { positions: [ { i: '-1', j: 4 }, { i: '-1', j: 3 },  ], css_id: 'tinytable_css_tqj2a5ruvhq743586ch3',}, 
+          { positions: [ { i: '-2', j: 3 }, { i: '-2', j: 2 }, { i: '-2', j: 4 },  ], css_id: 'tinytable_css_2234xlu0tw6lhggrrfzs',}, 
+          { positions: [ { i: '10', j: 1 }, { i: '10', j: 4 }, { i: '10', j: 2 }, { i: '10', j: 3 },  ], css_id: 'tinytable_css_ui13mn1rprurrf1g0zc6',}, 
+          { positions: [ { i: '8', j: 3 }, { i: '8', j: 2 }, { i: '8', j: 4 }, { i: '8', j: 1 },  ], css_id: 'tinytable_css_3pug2qgjb1aej31iaa8v',}, 
+          { positions: [ { i: '2', j: 1 }, { i: '1', j: 1 }, { i: '6', j: 1 }, { i: '3', j: 1 }, { i: '5', j: 1 }, { i: '1', j: 2 }, { i: '7', j: 1 }, { i: '4', j: 1 }, { i: '9', j: 1 }, { i: '5', j: 2 }, { i: '2', j: 2 }, { i: '3', j: 2 }, { i: '4', j: 2 }, { i: '9', j: 2 }, { i: '6', j: 2 }, { i: '7', j: 2 }, { i: '3', j: 3 }, { i: '4', j: 3 }, { i: '1', j: 3 }, { i: '2', j: 3 }, { i: '7', j: 3 }, { i: '3', j: 4 }, { i: '5', j: 3 }, { i: '6', j: 3 }, { i: '2', j: 4 }, { i: '7', j: 4 }, { i: '9', j: 3 }, { i: '1', j: 4 }, { i: '6', j: 4 }, { i: '4', j: 4 }, { i: '5', j: 4 }, { i: '9', j: 4 },  ], css_id: 'tinytable_css_kwqmxxggo2nztb6ducf7',}, 
+          { positions: [ { i: '-2', j: 1 },  ], css_id: 'tinytable_css_mee58xc7u0d6o1yrbrri',}, 
+          { positions: [ { i: '-1', j: 1 }, { i: '-1', j: 2 },  ], css_id: 'tinytable_css_v5wy8dmqbb58whlj6uc5',}, 
+          { positions: [ { i: '0', j: 1 }, { i: '0', j: 2 }, { i: '0', j: 3 }, { i: '0', j: 4 },  ], css_id: 'tinytable_css_k3dllfsl8wr25aow400j',}, 
+          { positions: [ { i: '10', j: 0 },  ], css_id: 'tinytable_css_wx45wxdg80i5d6y8z41g',}, 
+          { positions: [ { i: '8', j: 0 },  ], css_id: 'tinytable_css_pn1vc3jst9g9mlgxsfdy',}, 
+          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 }, { i: '4', j: 0 }, { i: '5', j: 0 }, { i: '6', j: 0 }, { i: '7', j: 0 }, { i: '9', j: 0 },  ], css_id: 'tinytable_css_y7fpbry4ivqh1aehcmpy',}, 
+          { positions: [ { i: '-2', j: 0 },  ], css_id: 'tinytable_css_6am32xli0nq5ap12ryuj',}, 
+          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_8yrxm6ljikk6qmi170yt',}, 
+          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_05w703ddb7zrvb5u2qbb',}, 
           ];
 
           // Loop over the arrays to style the cells
           cellsToStyle.forEach(function (group) {
               group.positions.forEach(function (cell) {
-                  styleCell_ecde6kuhysvr8x573o7b(cell.i, cell.j, group.css_id);
+                  styleCell_4grsmba67rlypprml6f2(cell.i, cell.j, group.css_id);
               });
           });
       });
@@ -1747,23 +1748,23 @@ Figure&nbsp;6: ROC Curve
 
     <style>
       /* tinytable css entries after */
-      .table td.tinytable_css_ipiaharb2ljj6siyicmy, .table th.tinytable_css_ipiaharb2ljj6siyicmy { text-align: center; text-align: center; }
-      .table td.tinytable_css_6lzfxjwfbfrq2dwpqamy, .table th.tinytable_css_6lzfxjwfbfrq2dwpqamy { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_a7am2ytnxjfhaqpm6g9i, .table th.tinytable_css_a7am2ytnxjfhaqpm6g9i { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_t3k8dscnbz1iglglzapp, .table th.tinytable_css_t3k8dscnbz1iglglzapp { text-align: center; border-bottom: solid black 0.05em; }
-      .table td.tinytable_css_6b4neiybn7e0y2okwy4v, .table th.tinytable_css_6b4neiybn7e0y2okwy4v { text-align: center; }
-      .table td.tinytable_css_pvpkx93fuwn9f2zdsm2q, .table th.tinytable_css_pvpkx93fuwn9f2zdsm2q { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_ssyiu3elxcwmtbuoco0v, .table th.tinytable_css_ssyiu3elxcwmtbuoco0v { text-align: center; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_ghibax2yymf7xya68rtn, .table th.tinytable_css_ghibax2yymf7xya68rtn { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_ya1clfw8jqjsb588zizd, .table th.tinytable_css_ya1clfw8jqjsb588zizd { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_azh75j2xzv8wdr0cjyjx, .table th.tinytable_css_azh75j2xzv8wdr0cjyjx { text-align: left; border-bottom: solid black 0.05em; }
-      .table td.tinytable_css_5ko504kk9vjahi22b8py, .table th.tinytable_css_5ko504kk9vjahi22b8py { text-align: left; }
-      .table td.tinytable_css_751pe1d1usjgc6osmlvj, .table th.tinytable_css_751pe1d1usjgc6osmlvj { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_l4jsiatjad6l7up7slur, .table th.tinytable_css_l4jsiatjad6l7up7slur { text-align: left; text-align: center; }
-      .table td.tinytable_css_wgx3o392qo1cora8lzl4, .table th.tinytable_css_wgx3o392qo1cora8lzl4 { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_tqj2a5ruvhq743586ch3, .table th.tinytable_css_tqj2a5ruvhq743586ch3 { text-align: center; text-align: center; }
+      .table td.tinytable_css_2234xlu0tw6lhggrrfzs, .table th.tinytable_css_2234xlu0tw6lhggrrfzs { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_ui13mn1rprurrf1g0zc6, .table th.tinytable_css_ui13mn1rprurrf1g0zc6 { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_3pug2qgjb1aej31iaa8v, .table th.tinytable_css_3pug2qgjb1aej31iaa8v { text-align: center; border-bottom: solid black 0.05em; }
+      .table td.tinytable_css_kwqmxxggo2nztb6ducf7, .table th.tinytable_css_kwqmxxggo2nztb6ducf7 { text-align: center; }
+      .table td.tinytable_css_mee58xc7u0d6o1yrbrri, .table th.tinytable_css_mee58xc7u0d6o1yrbrri { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_v5wy8dmqbb58whlj6uc5, .table th.tinytable_css_v5wy8dmqbb58whlj6uc5 { text-align: center; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_k3dllfsl8wr25aow400j, .table th.tinytable_css_k3dllfsl8wr25aow400j { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_wx45wxdg80i5d6y8z41g, .table th.tinytable_css_wx45wxdg80i5d6y8z41g { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_pn1vc3jst9g9mlgxsfdy, .table th.tinytable_css_pn1vc3jst9g9mlgxsfdy { text-align: left; border-bottom: solid black 0.05em; }
+      .table td.tinytable_css_y7fpbry4ivqh1aehcmpy, .table th.tinytable_css_y7fpbry4ivqh1aehcmpy { text-align: left; }
+      .table td.tinytable_css_6am32xli0nq5ap12ryuj, .table th.tinytable_css_6am32xli0nq5ap12ryuj { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_8yrxm6ljikk6qmi170yt, .table th.tinytable_css_8yrxm6ljikk6qmi170yt { text-align: left; text-align: center; }
+      .table td.tinytable_css_05w703ddb7zrvb5u2qbb, .table th.tinytable_css_05w703ddb7zrvb5u2qbb { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
     </style>
     <div class="container">
-      <table class="table table-borderless" id="tinytable_ecde6kuhysvr8x573o7b" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
+      <table class="table table-borderless" id="tinytable_4grsmba67rlypprml6f2" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
         <thead>
 <tr>
 <th scope="col" align="center" colspan="1" data-row="-2" data-col="0"> </th>
