--- a/12-Downloads.html
+++ b/12-Downloads.html
@@ -31,6 +31,7 @@ ul.task-list li input[type="checkbox"] {
 <meta name="quarto:offset" content="./">
 <link href="./13-Glossary.html" rel="next">
 <link href="./11-Quarto.html" rel="prev">
+<link href="./images/Crest_white.png" rel="icon" type="image/png">
 <script src="site_libs/quarto-html/quarto.js" type="module"></script>
 <script src="site_libs/quarto-html/tabsets/tabsets.js" type="module"></script>
 <script src="site_libs/quarto-html/popper.min.js"></script>
@@ -137,7 +138,7 @@ window.MathJax = {
     <ul class="list-unstyled mt-1">
         <li class="sidebar-item">
   <div class="sidebar-item-container"> 
-  <a href="./index.html" class="sidebar-item-text sidebar-link"><span class="chapter-title">Preface</span></a>
+  <a href="./index.html" class="sidebar-item-text sidebar-link"><span class="chapter-title">Welcome</span></a>
   </div>
 </li>
         <li class="sidebar-item">
@@ -212,15 +213,12 @@ window.MathJax = {
 <!-- margin-sidebar -->
     <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
         <nav id="TOC" role="doc-toc" class="toc-active">
-    <h2 id="toc-title">Table of contents</h2>
+    <h2 id="toc-title">Downloads</h2>
    
   <ul>
-  <li><a href="#downloads" id="toc-downloads" class="nav-link active" data-scroll-target="#downloads">Downloads</a>
-  <ul class="collapse">
-  <li><a href="#documents" id="toc-documents" class="nav-link" data-scroll-target="#documents">Documents</a></li>
+  <li><a href="#documents" id="toc-documents" class="nav-link active" data-scroll-target="#documents">Documents</a></li>
   <li><a href="#data-sets-in-alphabetical-order" id="toc-data-sets-in-alphabetical-order" class="nav-link" data-scroll-target="#data-sets-in-alphabetical-order">Data Sets (in alphabetical order)</a></li>
   <li><a href="#r-scripts" id="toc-r-scripts" class="nav-link" data-scroll-target="#r-scripts">R Scripts</a></li>
-  </ul></li>
   </ul>
 </nav>
     </div>
@@ -246,8 +244,7 @@ window.MathJax = {
 </header>
 
 
-<section id="downloads" class="level1 unnumbered">
-<h1 class="unnumbered">Downloads</h1>
+<p><br></p>
 <section id="documents" class="level2 unnumbered">
 <h2 class="unnumbered anchored" data-anchor-id="documents">Documents</h2>
 <ul>
@@ -284,7 +281,6 @@ window.MathJax = {
 </ul>
 
 
-</section>
 </section>
 
 </main> <!-- /main -->
